--- a/docker.env
+++ b/docker.env
@@ -5,30 +5,30 @@ ENABLE_DEBUG_TOOLBAR=False
 ENABLE_SILK=False
 
 # DATABASE
-DATABASE_URI=mysql://linhph:ahjhjdongok!!!@10.130.64.22:3306/wms_local?charset=utf8
-DATABASE_MONGO_URI=mongodb://linhph:test
+DATABASE_URI=
+DATABASE_MONGO_URI=
 
 # CELERY QUEUE
 CELERY_REDIS_TYPE=normal
-CELERY_BROKER_URL=redis://:ahihidongokhaha@10.130.64.22:6379/4
+CELERY_BROKER_URL=
 
 # CACHE
-CACHE_URL=redis://:ahihidongokhaha@10.130.64.22:6379/2
+CACHE_URL=
 CACHE_REDIS_PASS=xxx # Optional with cache redis sentinel
 
 # SENTRY ERROR CHANNEL
-SENTRY_DSN=https://88a513d01ab046509fefefa8e71d073c@sentry.ghtk.vn/37
+SENTRY_DSN=
 
 # GHTK ID
-CLIENT_GHTK_ID=01EWM1G9WJ8V1A04HH467362V9
-CLIENT_GHTK_SECRET=f26i5E3xAJi7B53t7V7MvVWy70aowF9c
-GHTK_ID_DOMAIN_URL=https://auth.ghtklab.com
+CLIENT_GHTK_ID=
+CLIENT_GHTK_SECRET=
+GHTK_ID_DOMAIN_URL=
 
 # GHTK CONNECTOR
-USER_GROUP_API_TOKEN=wmscentral693f66fb45e6e7f4b86220c301733692
+USER_GROUP_API_TOKEN=
 
 # MQTT CONFIG
-MQTT_HOST=mqtt.ghtklab.com
-MQTT_PORT=8888
-MQTT_USER=userx
-MQTT_PWD=ahihi
+MQTT_HOST=
+MQTT_PORT=
+MQTT_USER=
+MQTT_PWD=
